--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -2,19 +2,19 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Добавление человека</title>
+    <title>Редактирование</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/people}" th:object="${person}">
+<form th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
     <label for="fullName">Введите ФИО: </label>
     <input type="text" th:field="*{fullName}" id="fullName"/>
-    <div style="color:red" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">error</div>
+    <div style="color:red" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}"></div>
     <br/>
     <label for="birthYear">Введите год рождения: </label>
     <input type="text" th:field="*{birthYear}" id="birthYear"/>
-    <div style="color:red" th:if="${#fields.hasErrors('birthYear')}" th:errors="*{birthYear}">error</div>
+    <div style="color:red" th:if="${#fields.hasErrors('birthYear')}" th:errors="*{birthYear}"></div>
     <br/>
-    <input type="submit" value="Добавить!">
+    <input type="submit" value="Редактировать!"/>
 </form>
 </body>
 </html>
