--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -5,13 +5,25 @@
     <title>Человек</title>
 </head>
 <body>
-<p th:text="${person.getFullName() + ', ' + person.getBirthYear()}">user</p>
+<p th:text="${person.getFullName() + ', ' + person.getBirthYear()}">user info</p>
+<p th:if="${books == null || #lists.isEmpty(books)}">Человек не взял пока не одной книги</p>
+<div th:if="${books != null && !#lists.isEmpty(books)}">
+    <hr/>
+    <p><strong>Книги:</strong></p>
+    <div th:each="book : ${books}">
+        <p th:text="${book.getTitle() + ', ' + book.getAuthor() + ', ' + book.getYear()}">book info</p>
+    </div>
+</div>
 <hr/>
 <form th:method="GET" th:action="@{/people/{id}/edit(id=${person.getId()})}">
     <input type="submit" value="Редактировать"/>
 </form>
 <form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
     <input type="submit" value="Удалить"/>
+</form>
+<hr/>
+<form th:method="GET" th:action="@{/people}">
+    <input type="submit" value="Вернуться ко всем людям">
 </form>
 </body>
 </html>
