detected and killed mistake, final commit

--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -11,6 +11,8 @@
 </div>
 <br/>
 <hr/>
-<a href="/books/new">Добавить человека</a>
+<a href="/books/new">Добавить книгу</a>
+<hr/>
+<a href="/people">Перейти к людям</a>
 </body>
 </html>
