--- a/src/main/webapp/WEB-INF/views/books/edit.html
+++ b/src/main/webapp/WEB-INF/views/books/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Редактирование</title>
+    <title>Редактирование книги</title>
 </head>
 <body>
 <form th:method="PATCH" th:action="@{/books/{id}(id=${book.id})}" th:object="${book}">
