--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -13,6 +13,6 @@
 <hr/>
 <a href="/people/new">Добавить человека</a>
 <hr/>
-<a href="/books">Перейти ко книгам</a>
+<a href="/books">Перейти к книгам</a>
 </body>
 </html>
